<resources>
    <string name="app_name">Hire Me!</string>

    <!-- Bottom navigation -->
    <string name="menu_cover_letter">Cover Letter</string>
    <string name="menu_resume">Resume</string>

    <!-- Cover Letter -->
    <string name="cover_letter_title">Cover Letter</string>
    <string name="cover_letter_image_description">Fred\'s picture at his work desk</string>
    <string name="hire_me_button_text">Hire me!</string>
    <string name="cover_letter">
        Dear Blinkist,
        &lt;br>&lt;br>I was super intrigued when I read that your app got a Google Material Design Award, but after a few seconds using it, it was super clear you deserved it. I fell in love with the “Start trial” button animation, and the first time I saw it perfectly aligning with the toolbar while filling the whole width of the screen following my scroll it made me think, “I really want to work with them. And I really need to see the code behind this”.
        &lt;br>&lt;br>I’ve been happily working with Android for a while now. I started with &lt;a href="https://play.google.com/store/apps/developer?id=Manolos+Mobile">many small apps&lt;/a> for my university and local businesses. Then I joined ArcTouch and had the opportunity to work as a contractor on great Android projects, one of them being &lt;a href="https://play.google.com/store/apps/details?id=com.disney.datg.videoplatforms.android.abc">Disney-ABC&lt;/a>, where we built the app from scratch in Kotlin - and that was before Google\'s official announcement to support the language!
        &lt;br>&lt;br>Currently, I work as an Android dev for &lt;a href="https://play.google.com/store/apps/details?id=com.quizlet.quizletandroid">Quizlet&lt;/a>. I’m familiar with the challenges and struggles of trying to improve an already successful app to increase growth and monetization results even further. It’s always a great feeling when our changes have a meaningful impact on the product and I learned how important measuring results is in order to make sure we’re making the right decisions.
        &lt;br>&lt;br>This app was created inspired on Blinkist\'s own look and feel. Even though it’s super simple, I tried to write most of the code as if it was a real app so you can take a peek on how I code. You can check the source at &lt;a href="https://github.com/tfcporciuncula/hire-me">GitHub&lt;/a>.
        &lt;br>&lt;br>I look forward to hearing from you soon,
        &lt;br>&lt;br>&lt;br>Thiago Frederico Costa Porciúncula
    </string>
    <string name="cover_letter_signature_image_description">Fred\'s signature</string>

    <!-- You are hired email -->
    <string name="you_are_hired_email">tfcporciuncula@gmail.com</string>
    <string name="you_are_hired_subject">You\'re hired!</string>
    <string name="you_are_hired_email_error_message">It seems you have no email clients installed :(</string>

    <!-- Resume -->
    <string name="resume_title">Resume</string>
    <string name="linkedin_image_description">LinkedIn</string>
    <string name="linkedin_url">https://www.linkedin.com/in/tfcporciuncula</string>
    <string name="stackoverflow_image_description">Stack Overflow</string>
    <string name="stackoverflow_url">https://stackoverflow.com/users/2352699/thiago-porciúncula</string>
    <string name="github_image_description">GitHub</string>
    <string name="github_url">https://github.com/tfcporciuncula</string>

    <!-- Resume items -->
    <!-- Quizlet -->
    <string name="quizlet_title">Software Engineer @ Quizlet</string>
    <string name="quizlet_dates">[contractor] Oct 2017 - Today (7 months)</string>
    <string name="quizlet_description">
        • Led the project in all three fronts: Android, iOS and web. We were 10 members total on the ArcTouch side.
        \n\n• The team had recently adopted Kotlin, so I was responsible to help making sure the adoption was healthy and understood by the whole team.
        \n\n• Worked on bugfixing and new features, such as Firebase Message Service integration for push notifications, support for the new notification channels, several animations for their new diagram feature integration, and Android Keystore integration.
        \n\n• Dagger and RxJava are core building blocks of the app. Most of the code is still Java, but everything new we add is Kotlin.
    </string>
    <string name="quizlet_url">https://play.google.com/store/apps/details?id=com.quizlet.quizletandroid</string>

    <!-- Disney-ABC -->
    <string name="abc_title">Software Engineer @ Disney-ABC</string>
    <string name="abc_dates">[contractor] Jun 2016 - Sep 2017 (1 year 3 months)</string>
    <string name="abc_description">
        • Worked initially to improve the old app they had and then started a complete rewrite in Kotlin.
        \n\n• Since we were building the app from scratch, we were able to choose a nice and modern stack to develop the app. We wrote our code following MVP, and we included Dagger and RxJava as the main building blocks of the project.
    </string>
    <string name="abc_url">https://play.google.com/store/apps/details?id=com.disney.datg.videoplatforms.android.abc</string>

    <!-- ArcTouch -->
    <string name="arctouch_title">Princ. Software Engineer @ ArcTouch</string>
    <string name="arctouch_dates">May 2016 - Today (2 years)</string>
    <string name="arctouch_description">
        At ArcTouch, we work as contractors on mobile projects. We become part of the client\'s team during the project duration, and that lead us to live many different project experiences.
        \n\nAs a Principal, it\'s part of my responsibilities to mentor beginner Android devs and to spread our technical expertise through tech talks and local conferences such as our local GDG.
    </string>
    <string name="arctouch_url">https://arctouch.com</string>

    <!-- Softplan -->
    <string name="softplan_title">R&amp;D Software Engineer @ Softplan</string>
    <string name="softplan_dates">Jan 2015 - Apr 2016 (1 year 4 months)</string>
    <string name="softplan_description">
        • Worked on multiple projects to improve and maintain the company\'s in-house APIs and frameworks.
        \n\n• Security team member, responsible for the security framework evolution as well as the development of automated solutions for security testing and auditing.
        \n\n• Developed a Maven plugin for integration with the OWASP ZAP security tool.
        \n\nTechnologies involved: Java, JavaScript, PostgreSQL, MySQL, build (Maven, Gradle), testing (JUnit, TestNG, Mockito), and continuous integration (Jenkins, SonarQube) frameworks and tools.
    </string>
    <string name="softplan_url">http://softplan.com.br</string>

    <!-- ESIG -->
    <string name="sig_title">Software Engineer @ ESIG</string>
    <string name="sig_dates">Jun 2014 - Dec 2014 (7 months)</string>
    <string name="sig_description">
        Worked on the development and maintenance of the company\'s ERP systems related to academic activities, human resources and administration management.
        \n\nTechnologies involved: J2EE, JBoss 4.2.2, JSF 1.2, RichFaces, EJB 2, Spring, Hibernate, PostgreSQL, JasperReports.
    </string>
    <string name="sig_url">https://www.esig.com.br</string>

    <!-- Manolos -->
    <string name="manolos_title">Software Engineer @ Manolos</string>
    <string name="manolos_dates">Feb 2013 - May 2014 (1 year 4 months)</string>
    <string name="manolos_description">
        Manolos was a startup company created by me and two friends. We started developing Android applications, including the three most popular apps on Google Play related to our university. We then worked on several native mobile applications to extend and improve local business solutions.
        \n\nTechnologies involved: Java, Android, Swift, iOS.
    </string>
    <string name="manolos_url">https://play.google.com/store/apps/developer?id=Manolos+Mobile</string>

    <!-- Federal University of Rio Grande do Norte - UFRN -->
    <string name="ufrn_title">Lab Intern @ Federal University of Rio Grande do Norte</string>
    <string name="ufrn_dates">Feb 2013 - Feb 2014 (1 year 1 month)</string>
    <string name="ufrn_description">
        • Worked in the Industrial Computing Laboratory to develop software products - mainly based on Java Swing applications - to analyze the operation and management of industrial plants.
        \n\n• Published a paper on the Brazilian Symposium on Intelligent Automation (SBAI 2013) and two more on the Brazilian Conference on Automation (CBA 2014).
        \n\nTechnologies involved: Java, Swing, JFreeChart, Java RMI, PostgreSQL.
    </string>
    <string name="ufrn_url">http://lii.dca.ufrn.br/lii</string>

    <!-- University of Delaware -->
    <string name="delaware_title">Lab Intern @ University of Delaware</string>
    <string name="delaware_dates">Jun 2012 - Dec 2012 (7 months)</string>
    <string name="delaware_description">
        • Research and development project to create a hardware prototype of a communication modem to perform wireless data transmission in the ocean.
        \n\n• The prototype was built on a low-power applications processor based on an ARM and a DSP core, where most modulation algorithms were developed using the DSP Library by Texas Instruments.
        \n\n• Presented a poster on the International Conference on Underwater Networks and Systems in Los Angeles, CA, and at the University of Delaware Research Foundation poster session.
    </string>
    <string name="delaware_url">http://www.ceoe.udel.edu</string>
</resources>
